时间和空间复杂度分析

--- a/doc/01复杂度分析.md
+++ b/doc/01复杂度分析.md
@@ -55,4 +55,50 @@
 
 > 常数阶 < 对数阶 < 线性阶 < 线性对数阶 < 平方阶 < 指数阶 < 阶乘阶
 
+>> 常数阶O(1):与输入的数据量无关。
+
+>> 线性阶O(n):输入数据大小以线性级别增长。常出现在单层循环中。
+
+>> 平方阶O(n*n):操作数量相对于输入数据大小以平方级别增长。一般是双层循环。
+
+>> 指数阶O(2的n次方):一分二，二分四，四分八，以此类推。实际应用不现实，需要用动态规划或者贪心算法来解决这个问题。日常见于递归。
+
+>> 对数阶O(log n):与指数阶相反，对数是每次缩减一半。常出现于二分查找和分治算法。也出现在递归中。
+
+>> 线性对数阶O(n log n):常出现在嵌套循环中，时间复杂度为O(log n) 和 O(n)。主流排序算法：快速排序、归并排序、堆排序等。
+
+>> 阶乘阶O(n!): 常出现在递归中。
+
+6. 最差、最佳、平均时间复杂度
+> 算法的效率可能跟数据的分布有关。
+
 #### 二、空间复杂度
+
+1. 算法相关空间
+> 输入空间:存储算法的输入数据
+
+> 暂存空间:存储算法运行过程中的变量、对象、函数上下文等数据
+>> 暂存数据:常量、变量、对象等
+
+>> 栈帧空间:上下文数据
+
+>> 指令空间:保存编译后的程序指令
+
+> 输出空间:存储算法的输出数据
+
+### 算法复杂度一般指暂存空间+输出空间
+
+2. 推算方法
+> 以最差输入数据为准
+
+> 以算法运行过程中的峰值内存为准
+3. 常见类型
+
+> O(1) < O(log n) < O(n) < O(n * n) < O(2的指数)
+
+> 常数阶 < 对数阶 < 线性阶 < 平方阶 < 指数阶
+
+>> 线性阶:数组、链表、栈、队列等
+>> 对数阶:分治算法和数据类型转换。归并排序和数字转化为字符串。
+>> 平方阶:矩阵和图
+>> 指数阶：二叉树 
