数组和链表基本概念

--- a/doc/01复杂度分析.md
+++ b/doc/01复杂度分析.md
@@ -1,104 +1,124 @@
 ### 算法评估效率维度
+
 1. 时间效率，即算法的运行速度的快慢。
 2. 空间效率，即算法占用的内存空间大小。
 
 ### 效率评估的方法
+
 1. 实际测试：缺陷(不同算法在不同测试环境下效率不同)
 2. 理论估算
-    > 复杂度分析(渐进复杂度分析)：算法运行效率随着输入数据量增多时的增长趋势。
-    >> 算法运行效率
-    >>> 运行时间(时间复杂度)
 
-    >>> 占用空间(空间复杂度)
+   > 复杂度分析(渐进复杂度分析)：算法运行效率随着输入数据量增多时的增长趋势。
+   >
+   > > 算法运行效率
+   > >
+   > > > 运行时间(时间复杂度)
 
-    >> 随着输入数据量增多时:代表复杂度与输入数据量有关。
+   > > > 占用空间(空间复杂度)
 
-    >> 增长趋势: 不关心使用了时间或者空间，而是给出了一种趋势性分析。
+   > > 随着输入数据量增多时:代表复杂度与输入数据量有关。
 
-    >> 重要性：给出一把评价算法效率的标尺，以对不同算法直接的效率进行比较。
+   > > 增长趋势: 不关心使用了时间或者空间，而是给出了一种趋势性分析。
+
+   > > 重要性：给出一把评价算法效率的标尺，以对不同算法直接的效率进行比较。
 
 #### 一、时间复杂度
+
 1. 统计算法运行时间(不合理且难实现)
-    * 确定运行平台
-    * 评估各种计算操作所需的运行时间
-    * 统计代码中所有的计算操作
+   - 确定运行平台
+   - 评估各种计算操作所需的运行时间
+   - 统计代码中所有的计算操作
 2. 统计时间增长趋势
-    * 常数阶
-    * 线性阶
-    > 不能判断哪种趋势的算法优劣
+   - 常数阶
+   - 线性阶
+     > 不能判断哪种趋势的算法优劣
 3. 函数渐近上界
-    * T(n) = O(f(n))
+   - T(n) = O(f(n))
 4. 推算方法
-    * 统计操作数量
-        > 简化技巧
-        >> 忽略与n无关的操作
-        
-        >> 省略所有系数
 
-        >> 循环嵌套时使用乘法
+   - 统计操作数量
 
-        >>> 例子： 2n*n+7n+3 ==> n*n+n ==> O(n*n)
+     > 简化技巧
+     >
+     > > 忽略与 n 无关的操作
 
-    * 判断渐近上界
-        > 当n趋于无穷大时
-        >> 100000                     O(1)
+     > > 省略所有系数
 
-        >> 3n+2                       O(n)
-        
-        >> 2n*n+3n+2                  O(n*n)
-        
-        >> n*n*n+10000n*n             O(n*n*n)
-        
-        >> 2的n次方+10000n*n*n        O(2的n次方)
+     > > 循环嵌套时使用乘法
+
+     > > > 例子： 2n*n+7n+3 ==> n*n+n ==> O(n\*n)
+
+   - 判断渐近上界
+
+     > 当 n 趋于无穷大时
+     >
+     > > 100000 O(1)
+
+     > > 3n+2 O(n)
+
+     > > 2n*n+3n+2 O(n*n)
+
+     > > n*n*n+10000n*n O(n*n\*n)
+
+     > > 2 的 n 次方+10000n*n*n O(2 的 n 次方)
+
 5. 常见类型
-> O(1) < O(log n) < O(n) < O(n log n) < O(n*n) < O(2的次方) < O(n!)
 
-> 常数阶 < 对数阶 < 线性阶 < 线性对数阶 < 平方阶 < 指数阶 < 阶乘阶
+   > O(1) < O(log n) < O(n) < O(n log n) < O(n\*n) < O(2 的次方) < O(n!)
 
->> 常数阶O(1):与输入的数据量无关。
+   > 常数阶 < 对数阶 < 线性阶 < 线性对数阶 < 平方阶 < 指数阶 < 阶乘阶
 
->> 线性阶O(n):输入数据大小以线性级别增长。常出现在单层循环中。
+   > > 常数阶 O(1):与输入的数据量无关。
 
->> 平方阶O(n*n):操作数量相对于输入数据大小以平方级别增长。一般是双层循环。
+   > > 线性阶 O(n):输入数据大小以线性级别增长。常出现在单层循环中。
 
->> 指数阶O(2的n次方):一分二，二分四，四分八，以此类推。实际应用不现实，需要用动态规划或者贪心算法来解决这个问题。日常见于递归。
+   > > 平方阶 O(n\*n):操作数量相对于输入数据大小以平方级别增长。一般是双层循环。
 
->> 对数阶O(log n):与指数阶相反，对数是每次缩减一半。常出现于二分查找和分治算法。也出现在递归中。
+   > > 指数阶 O(2 的 n 次方):一分二，二分四，四分八，以此类推。实际应用不现实，需要用动态规划或者贪心算法来解决这个问题。日常见于递归。
 
->> 线性对数阶O(n log n):常出现在嵌套循环中，时间复杂度为O(log n) 和 O(n)。主流排序算法：快速排序、归并排序、堆排序等。
+   > > 对数阶 O(log n):与指数阶相反，对数是每次缩减一半。常出现于二分查找和分治算法。也出现在递归中。
 
->> 阶乘阶O(n!): 常出现在递归中。
+   > > 线性对数阶 O(n log n):常出现在嵌套循环中，时间复杂度为 O(log n) 和 O(n)。主流排序算法：快速排序、归并排序、堆排序等。
+
+   > > 阶乘阶 O(n!): 常出现在递归中。
 
 6. 最差、最佳、平均时间复杂度
-> 算法的效率可能跟数据的分布有关。
+   > 算法的效率可能跟数据的分布有关。
 
 #### 二、空间复杂度
 
 1. 算法相关空间
-> 输入空间:存储算法的输入数据
 
-> 暂存空间:存储算法运行过程中的变量、对象、函数上下文等数据
->> 暂存数据:常量、变量、对象等
+   > 输入空间:存储算法的输入数据
 
->> 栈帧空间:上下文数据
+   > 暂存空间:存储算法运行过程中的变量、对象、函数上下文等数据
+   >
+   > > 暂存数据:常量、变量、对象等
 
->> 指令空间:保存编译后的程序指令
+   > > 栈帧空间:上下文数据
 
-> 输出空间:存储算法的输出数据
+   > > 指令空间:保存编译后的程序指令
+
+   > 输出空间:存储算法的输出数据
 
 ### 算法复杂度一般指暂存空间+输出空间
 
 2. 推算方法
-> 以最差输入数据为准
 
-> 以算法运行过程中的峰值内存为准
+   > 以最差输入数据为准
+
+   > 以算法运行过程中的峰值内存为准
+
 3. 常见类型
 
-> O(1) < O(log n) < O(n) < O(n * n) < O(2的指数)
+   > O(1) < O(log n) < O(n) < O(n \* n) < O(2 的指数)
 
-> 常数阶 < 对数阶 < 线性阶 < 平方阶 < 指数阶
+   > 常数阶 < 对数阶 < 线性阶 < 平方阶 < 指数阶
 
->> 线性阶:数组、链表、栈、队列等
->> 对数阶:分治算法和数据类型转换。归并排序和数字转化为字符串。
->> 平方阶:矩阵和图
->> 指数阶：二叉树 
+   > > 线性阶:数组、链表、栈、队列等
+
+   > > 对数阶:
+
+   > > 平方阶:矩阵和图
+
+   > > 指数阶：二叉树
