--- a/doc/06队列.md
+++ b/doc/06队列.md
@@ -10,3 +10,20 @@
 
    > peep():访问队首 O(1)
 
+## 双向队列
+
+1. 头尾都可新增和删除操作
+
+2. 双向队列常用操作
+
+   > pushFirst():将元素添加至队首 O(1)
+
+   > pushLast():将元素添加至队尾 O(1)
+
+   > popFirst(): 删除队首元素 O(1)
+
+   > popLast(): 删除队尾元素 O(1)
+
+   > peekFirst(): 访问队首 O(1)
+
+   > peekLast(): 访问队尾 O(1)
